--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,7 +11,7 @@ layout: default
       <p class="fs-text-sm c-gray m-b0 b-pt1">
         The Littoral Line.<br>
         An electronic letter from <a href="https://twitter.com/callumflack" target="_blank">Callum Flack</a>.<br>
-        You can <a href="https://callumflack.design/the-littoral-line" target="_blank">subscribe or read the archives here</a>.
+        You can <a href="https://newsletter.tiep.me/the-littoral-line" target="_blank">subscribe or read the archives here</a>.
       </p>
 
     </div>
@@ -20,7 +20,7 @@ layout: default
       <article class="b-mb2">
         <h1 class="Headline">
           {% if site.env == "production" %}
-            <a href="https://thelittoralline.callumflack.design{{ post.url }}">{{ post.title }}</a>
+            <a href="https://thelittoralline.newsletter.tiep.me{{ post.url }}">{{ post.title }}</a>
           {% else %}
             <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
           {% endif %}
