--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
                 <td>
 
                   <div class="b-pb1">
-                    <a href="https://callumflack.design/" target="_blank"><img src="/src/assets/LL-logo-24.png" height="auto" width="24"></a>
+                    <a href="https://newsletter.tiep.me/" target="_blank"><img src="/src/assets/LL-logo-24.png" height="auto" width="24"></a>
                   </div>
                   <h1 class="Title">{{ page.title }}</h1>
                   <h2 class="fs-text-sm c-gray {% if page.issue_number %}space-1x4{% else %}space-2{% endif %}">
@@ -38,7 +38,7 @@ layout: default
                   </h2>
 
                   {% if page.issue_number != null %}
-                    <p class="fs-text-sm c-gray space-2">Just visiting? <a href="https://callumflack.design/the-littoral-line">Subscribe to The Littoral Line.</a></p>
+                    <p class="fs-text-sm c-gray space-2">Just visiting? <a href="https://newsletter.tiep.me/the-littoral-line">Subscribe to The Littoral Line.</a></p>
                   {% endif %}
 
                   <div class="Content-post">
