--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
                   <hr>
                   <p class="fs-text-sm c-gray m-b0">
                     ✺ The Littoral Line<br>
-                    An electronic letter from <a href="https://newsletter.tiep.me/about.html" target="_blank">Callum Flack</a>.<br>
-                    You can <a href="https://newsletter.tiep.me/the-littoral-line" target="_blank">subscribe or read the archives here</a>.
+                    newsletter by <a href="https://newsletter.tiep.me/about.html" target="_blank">tiep</a>.<br>
+                    You can <a href="https://newsletter.tiep.me/the-littoral-line.html" target="_blank">subscribe or read the archives here</a>.
                   </p>
 
                   {%- comment -%} {% if jekyll.environment != "production" and page.layout == "post" %}
