--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                   <hr>
                   <p class="fs-text-sm c-gray m-b0">
                     ∎ The Ramen Daily Line<br>
-                    newsletter by <a href="https://newsletter.tiep.me/about.html" target="_blank">tiep</a>.<br>
+                    newsletter by <a href="https://tiep.me/about.html" target="_blank">tiep</a>.<br>
                     You can <a href="https://newsletter.tiep.me/the-littoral-line.html" target="_blank">subscribe or read the archives here</a>.
                   </p>
 
