--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,9 +9,9 @@ layout: default
       <img src="/src/assets/LL-logo-24.png" height="auto" width="24">
 
       <p class="fs-text-sm c-gray m-b0 b-pt1">
-        The Ramen Daily Line.<br>
-        newsletter from <a href="https://tiep.me" target="_blank">tiep</a>.<br>
-        You can <a href="https://newsletter.tiep.me/the-littoral-line.html" target="_blank">subscribe or read the archives here</a>.
+        The Japan Anime.<br>
+        newsletter from <a href="https://chuyengiadinh.site" target="_blank">tiep</a>.<br>
+        You can <a href="https://chuyengiadinh.site" target="_blank">subscribe or read the archives here</a>.
       </p>
 
     </div>
