--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
                 <td>
 
                   <div class="b-pb1">
-                    <a href="https://newsletter.tiep.me/" target="_blank"><img src="/src/assets/LL-logo-24.png" height="auto" width="24"></a>
+                    <a href="https://chuyengiadinh.site/" target="_blank"><img src="/src/assets/LL-logo-24.png" height="auto" width="24"></a>
                   </div>
                   <h1 class="Title">{{ page.title }}</h1>
                   <h2 class="fs-text-sm c-gray {% if page.issue_number %}space-1x4{% else %}space-2{% endif %}">
