--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,9 +11,9 @@
 
                   <hr>
                   <p class="fs-text-sm c-gray m-b0">
-                    ∎ The Ramen Daily Line<br>
-                    newsletter by <a href="https://tiep.me/about.html" target="_blank">tiep</a>.<br>
-                    You can <a href="https://newsletter.tiep.me/the-littoral-line.html" target="_blank">subscribe or read the archives here</a>.
+                    ∎ The Japanese Anime<br>
+                    newsletter by <a href="https://chuyengiadinh.site/" target="_blank">Tào khang</a>.<br>
+                    You can <a href="https://chuyengiadinh.site" target="_blank">subscribe or read the archives here</a>.
                   </p>
 
                   {%- comment -%} {% if jekyll.environment != "production" and page.layout == "post" %}
