--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,3 +15,14 @@
   {% comment %}{% feed_meta %}{% endcomment %}
 
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5360552473632989"
+     data-ad-slot="7480425614"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
