--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,43 @@
   {% include head.html %}
 
   <body>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5360552473632989"
+     data-ad-slot="7480425614"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5360552473632989"
+     data-ad-slot="6989826247"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <main class="b-py25 m-b0" aria-label="content">
     {{ content }}
   </main>
 
   {% include footer.html %}
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5360552473632989"
+     data-ad-slot="6989826247"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   {% include google-analytics.html %}
   </body>
 </html>
