--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,11 @@
               <tr>
                 <td>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Ads -->
+<!-- ad4 -->
 <ins class="adsbygoogle"
      style="display:block"
-     data-ad-client="ca-pub-5360552473632989"
-     data-ad-slot="7480425614"
+     data-ad-client="ca-pub-8531706274569030"
+     data-ad-slot="2040550263"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
@@ -22,8 +22,8 @@
                   <hr>
                   <p class="fs-text-sm c-gray m-b0">
                     ∎ The Japanese Anime<br>
-                    newsletter by <a href="https://chuyengiadinh.site/" target="_blank">Tào khang</a>.<br>
-                    You can <a href="https://chuyengiadinh.site" target="_blank">subscribe or read the archives here</a>.
+                    newsletter by <a href="https://ngonngonmoigio.com/" target="_blank">Tào khang</a>.<br>
+                    You can <a href="https://ngonngonmoigio.com" target="_blank">subscribe or read the archives here</a>.
                   </p>
 
                   {%- comment -%} {% if jekyll.environment != "production" and page.layout == "post" %}
